<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tw__composer_hint">"What's Happening?"</string>
    <string name="tw__like_tweet">Like Tweet</string>
    <string name="tw__liked_tweet">Undo Like</string>
    <string name="tw__loading_tweet">Loading Tweet</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__max_tweet_chars">140</string>
    <string name="tw__pause">pause</string>
    <string name="tw__play">play</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="tw__relative_date_format_long">MM/dd/yy</string>
    <string name="tw__relative_date_format_short">MMM dd</string>
    <string name="tw__replay">replay</string>
    <string name="tw__retweeted_by_format">Retweeted by %1$s</string>
    <string name="tw__share_content_format">"Check out @%1$s's Tweet: https://twitter.com/%1$s/status/%2$s"</string>
    <string name="tw__share_subject_format">Tweet from %1$s (@%2$s)</string>
    <string name="tw__share_tweet">Share Tweet</string>
    <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
    <string name="tw__tweet_media">Tweet Media</string>
    <string name="X8_1280x720_200P">1280x720 200P 16:9</string>
    <string name="X8_1920x1080_100P">1920x1080 100P 16:9</string>
    <string name="X8_1920x1080_24P">1920x1080 24P 16:9</string>
    <string name="X8_1920x1080_30P">1920x1080 30P 16:9</string>
    <string name="X8_1920x1080_60P">1920x1080 60P 16:9</string>
    <string name="app_name">Mi8Test</string>
    <string name="app_product_name">FIMI Navi</string>
    <string name="app_version">1.0.20.20302</string>
    <string name="audio_title">Audio</string>
    <string name="camera_sd_format">Format SD Card</string>
    <string name="device_slogn">Totally evolved</string>
    <string name="gaode_maps_key">49df229af3cf989a82112b9015f587b9</string>
    <string name="google_maps_key">AIzaSyAJg2hNnkb9fNwMvUJ4C9C6128TZHrm9zo</string>
    <string name="grid_lines">Grid Line</string>
    <string name="grid_lines_others">Others</string>
    <string name="height_tip">Flight altitude should be over 5m</string>
    <string name="image_format">Photo Format</string>
    <string name="image_jpg">JPG</string>
    <string name="image_raw">JPG+RAW (Save JPG only in capture )</string>
    <string name="media_setting_standard">Resolution</string>
    <string name="media_setting_standard_ntsc">NTSC</string>
    <string name="media_setting_standard_pal">PAL</string>
    <string name="option_photo_12M_4k">4 : 3 | 12-megapixel | Default</string>
    <string name="option_photo_8M_4k">16 : 9 | 8-megapixel</string>
    <string name="option_video_1080_30f">1920x1080 | 30fps | Default</string>
    <string name="option_video_1080p_100_4k">1920x1080 | 100fps</string>
    <string name="option_video_1080p_30_4k">1920x1080 | 30fps</string>
    <string name="option_video_1080p_60">1920x1080 | 60fps</string>
    <string name="option_video_1080p_60_4k">1920x1080 | 60fps</string>
    <string name="option_video_1440p_60_4k">2560x1440 | 30fps</string>
    <string name="option_video_2160p_24_4k">3840x2160 | 24fps</string>
    <string name="option_video_2160p_30_4k">3840x2160 | 30fps</string>
    <string name="option_video_720p_30_4k">1280x720 | 200fps</string>
    <string name="photo">Photo</string>
    <string name="photograph">photograph</string>
    <string name="record_title">Video</string>
    <string name="sdcard_operation">SD Card</string>
    <string name="set_fail_no_connect_camera">Setting failed for disconnecting the camera</string>
    <string name="str_main_connect_device">Enter Device</string>
    <string name="vedio_recording_audio">Record audio in video</string>
    <string name="x8_2560x1440_24P">2560x1440 24P 16:9</string>
    <string name="x8_2560x1440_30P">2560x1440 30P 16:9</string>
    <string name="x8_2560x1440_60P">2560x1440 60P 16:9</string>
    <string name="x8_3840x2160_24P">3840x2160 24P 16:9</string>
    <string name="x8_3840x2160_30P">3840x2160 30P 16:9</string>
    <string name="x8_AcceL">Accelerometer1</string>
    <string name="x8_AcceL_2">Accelerometer2</string>
    <string name="x8_MagX">Compass1</string>
    <string name="x8_MagX_2">Compass2</string>
    <string name="x8_accurate_check_obj0">Landing pad not detected</string>
    <string name="x8_accurate_check_obj1">Landing pad detected</string>
    <string name="x8_ai_aerail_graph_complete">Cinematic mission completed</string>
    <string name="x8_ai_aerail_graph_exite_tip">Are you sure to exit Cinematic mode?</string>
    <string name="x8_ai_aerail_graph_next_tip1">*The lower brake sensitivity is, the longer distance it will be</string>
    <string name="x8_ai_aerail_graph_next_tip2">*The lower yaw sensitivity is, the slower speed it will be</string>
    <string name="x8_ai_aerail_graph_next_title">Aerial attribute</string>
    <string name="x8_ai_aerial_photograph">Cinematic Mode</string>
    <string name="x8_ai_aerial_photograph_tip1">1. The brake distance will be lengthened and the angular speed of rotation will be limited to make sure the shooting videos are more stable and smooth</string>
    <string name="x8_ai_auto_photo_compelete_tip">Dronie mission completed</string>
    <string name="x8_ai_fly_gravitation_excute_advanced_setting">Advanced settings</string>
    <string name="x8_battery_low_landing">Land When Battery Only Enough for Land</string>
    <string name="x8_battery_low_return">RTH When Battery Only Enough for RTH</string>
    <string name="x8_battery_reset_params">Reset Bat Para</string>
    <string name="x8_battery_setting_battery_core1">Cell 1</string>
    <string name="x8_battery_setting_battery_core2">Cell 2</string>
    <string name="x8_battery_setting_battery_core3">Cell 3</string>
    <string name="x8_battery_setting_low_power_operation">Low Battery Action</string>
    <string name="x8_battery_setting_low_power_warning">Low Battery Warning</string>
    <string name="x8_battery_setting_over_release_times">Over-discharged Times</string>
    <string name="x8_battery_setting_recycle_times">Cycles</string>
    <string name="x8_battery_setting_remain_capacity">Cap./Total Cap.</string>
    <string name="x8_battery_setting_remain_electric">Remaining</string>
    <string name="x8_battery_setting_serious_low_power_operation">Critically Low Battery Action</string>
    <string name="x8_battery_setting_serious_low_power_warning">Critically Low Battery Warning</string>
    <string name="x8_battery_setting_temperature">Temperature</string>
    <string name="x8_default_na">NA</string>
    <string name="x8_flightlog_date">Date</string>
    <string name="x8_flightlog_mileage">Distance</string>
    <string name="x8_flightlog_size">Size</string>
    <string name="x8_flightlog_time">Duration</string>
    <string name="x8_gimbal_setting_gimbal_gain">Gimbal Gain</string>
    <string name="x8_gimbal_setting_three_axis_tuning">Advanced settings</string>
    <string name="x8_gimbal_setting_tuning">Adjust</string>
    <string name="x8_gimbal_setting_tuning_hint">Adjustment the parameter may cause gimbal to tilt. Please keep the default value if the gimbal is normal</string>
</resources>