<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fimi.kernel.percent.PercentRelativeLayout android:id="@id/layout_top" android:background="@color/white_5" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_heightPercent="14.814815%h" app:layout_marginLeftPercent="1.478743%w" app:layout_marginTopPercent="1.478743%h" app:layout_marginRightPercent="1.478743%w">
        <ImageView android:id="@id/btn_return" android:background="@drawable/x8_img_return" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/textsize_45" android:textColor="@color/white_100" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_ai_fly_gravitation_excute_advanced_setting" android:layout_centerInParent="true" />
    </com.fimi.kernel.percent.PercentRelativeLayout>
    <com.fimi.kernel.percent.PercentLinearLayout android:orientation="vertical" android:id="@id/x8_advanced_seetup_item_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_top" app:layout_marginLeftPercent="1.478743%w" app:layout_marginRightPercent="1.478743%w">
        <com.fimi.app.x8s.widget.X8ValueSeakBarWithTip android:id="@id/vsb_gimbal_gain" android:layout_width="fill_parent" android:layout_height="wrap_content" app:x8_value_title="@string/x8_gimbal_setting_gimbal_gain" app:x8_value_suffix="%" app:x8_value_close_color="@color/white_100" app:x8_value_open_color="@color/x8_fc_all_setting_blue" app:x8_value_seekbar_max="200.0" app:x8_value_seekbar_default="0.0" app:x8_value_seekbar_min="1.0" />
        <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_gimbal_item_x1" android:paddingRight="@dimen/x8s_main_gimbal_item_x1" android:layout_width="fill_parent" android:layout_height="55.0dip">
            <TextView android:textSize="13.0dip" android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:id="@id/x8_tv_three_axis_tuning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_gimbal_setting_three_axis_tuning" android:layout_centerVertical="true" />
            <TextView android:textSize="10.0dip" android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/x8_gimbal_setting_tuning_hint" android:layout_below="@id/x8_tv_three_axis_tuning" />
            <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@id/x8_btn_three_axis_tuning" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="27.0dip" android:text="@string/x8_gimbal_setting_tuning" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" />
        </com.fimi.kernel.percent.PercentRelativeLayout>
    </com.fimi.kernel.percent.PercentLinearLayout>
</com.fimi.kernel.percent.PercentRelativeLayout>