<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout android:orientation="horizontal" android:id="@id/rlRootView" android:layout_width="fill_parent" android:layout_height="@dimen/x8s_ai_line_history_item_layout_x1"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fimi.kernel.percent.PercentLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/x8_iv_flightlog_collect" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/x8_flightlog_collect_mark" android:layout_centerVertical="true" app:layout_marginLeftPercent="3.68%w" />
        <TextView android:textSize="14.0dip" android:textColor="@color/white_90" android:id="@id/x8_tv_title_flightlog_date" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/x8_flightlog_date" android:layout_centerVertical="true" android:textAlignment="center" app:layout_widthPercent="20%w" app:layout_marginLeftPercent="2.28%w" />
        <TextView android:textSize="14.0dip" android:textColor="@color/white_90" android:id="@id/x8_tv_title_flightlog_mileage" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/x8_flightlog_mileage" android:layout_centerVertical="true" android:textAlignment="center" app:layout_widthPercent="20%w" app:layout_marginLeftPercent="2.28%w" />
        <TextView android:textSize="14.0dip" android:textColor="@color/white_90" android:id="@id/x8_tv_title_flightlog_time" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/x8_flightlog_time" android:layout_centerVertical="true" android:textAlignment="center" app:layout_widthPercent="20%w" app:layout_marginLeftPercent="2.28%w" />
        <TextView android:textSize="14.0dip" android:textColor="@color/white_90" android:id="@id/x8_tv_title_flightlog_size" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/x8_flightlog_size" android:layout_centerVertical="true" android:textAlignment="center" app:layout_widthPercent="20%w" app:layout_marginLeftPercent="2.28%w" />
    </com.fimi.kernel.percent.PercentLinearLayout>
    <View android:background="@color/white_30" android:layout_width="fill_parent" android:layout_height="@dimen/x8s_main_general_fw_upgrade_item_normal_x1" android:layout_alignParentBottom="true" />
</com.fimi.kernel.percent.PercentRelativeLayout>