<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/x8_rl_main_battery_item" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:batteryLayout="http://schemas.android.com/apk/res-auto">
    <com.fimi.kernel.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_battery" android:background="@color/white_5" android:layout_width="fill_parent" android:layout_height="@dimen/x8s_main_battery_item_x8" batteryLayout:layout_marginLeftPercent="1.478743%w" batteryLayout:layout_marginTopPercent="1.478743%w" batteryLayout:layout_marginRightPercent="1.478743%w" batteryLayout:layout_paddingTopPercent="1.478743%h" batteryLayout:layout_paddingBottomPercent="1.478743%h">
            <com.fimi.app.x8s.widget.X8BatteryLayout android:gravity="center" android:id="@id/layout_battery_core1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" batteryLayout:coreName="@string/x8_battery_setting_battery_core1" batteryLayout:defaultValue="@string/x8_default_na" />
            <com.fimi.app.x8s.widget.X8BatteryLayout android:gravity="center" android:id="@id/layout_battery_core2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" batteryLayout:coreName="@string/x8_battery_setting_battery_core2" batteryLayout:defaultValue="@string/x8_default_na" />
            <com.fimi.app.x8s.widget.X8BatteryLayout android:gravity="center" android:id="@id/layout_battery_core3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" batteryLayout:coreName="@string/x8_battery_setting_battery_core3" batteryLayout:defaultValue="@string/x8_default_na" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/layout_normal_setting" android:background="@color/white_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_battery" batteryLayout:layout_marginLeftPercent="1.478743%w" batteryLayout:layout_marginTopPercent="0.99%w" batteryLayout:layout_marginRightPercent="1.478743%w">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_remain_electric" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:id="@id/tv_remain_electric" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x8s_main_battery_item_x4" android:text="@string/x8_default_na" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_remain_capacity" android:layout_weight="2.0" />
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:gravity="right" android:id="@id/tv_remain_capacity" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x8s_main_battery_item_x4" android:text="@string/x8_default_na" android:layout_weight="1.0" />
                <ImageButton android:id="@id/btn_capacity_not_update" android:background="@drawable/x8_btn_serious" android:padding="@dimen/x8s_main_battery_item_x3" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x8s_main_battery_item_x4" />
            </LinearLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_recycle_times" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:id="@id/tv_recycle_times" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x8s_main_battery_item_x4" android:text="@string/x8_default_na" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_temperature" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:id="@id/tv_temperature" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x8s_main_battery_item_x4" android:text="@string/x8_default_na" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_over_release_times" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:id="@id/tv_over_release_times" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x8s_main_battery_item_x4" android:text="@string/x8_default_na" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/layout_abnormal_setting" android:background="@color/white_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_normal_setting" batteryLayout:layout_marginLeftPercent="1.478743%w" batteryLayout:layout_marginTopPercent="0.99%w" batteryLayout:layout_marginRightPercent="1.478743%w" batteryLayout:layout_marginBottomPercent="1.478743%w">
            <com.fimi.app.x8s.widget.X8ValueSeakBarView android:id="@id/vsb_low_power_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" batteryLayout:x8_value_title="@string/x8_battery_setting_low_power_warning" batteryLayout:x8_value_suffix="%" batteryLayout:x8_value_close_color="@color/white_100" batteryLayout:x8_value_open_color="@color/x8_fc_all_setting_blue" batteryLayout:x8_value_seekbar_max="50.0" batteryLayout:x8_value_seekbar_default="30.0" batteryLayout:x8_value_seekbar_min="30.0" />
            <RelativeLayout android:paddingLeft="@dimen/x8s_main_fc_item_x5" android:paddingRight="@dimen/x8s_main_fc_item_x5" android:layout_width="fill_parent" android:layout_height="@dimen/x8s_main_fc_item_x9">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_battery_low_return" android:layout_centerVertical="true" />
                <com.fimi.widget.SwitchButton android:id="@id/swb_low_power_return" android:layout_width="@dimen/x8s_main_fc_item_x8" android:layout_height="@dimen/x8s_main_fc_item_x6" android:layout_alignParentRight="true" android:layout_centerVertical="true" batteryLayout:onColor="#ff09d9ff" />
            </RelativeLayout>
            <RelativeLayout android:paddingLeft="@dimen/x8s_main_fc_item_x5" android:paddingRight="@dimen/x8s_main_fc_item_x5" android:layout_width="fill_parent" android:layout_height="@dimen/x8s_main_fc_item_x9">
                <TextView android:textSize="@dimen/textsize_39" android:textColor="@color/white_100" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_battery_low_landing" android:layout_centerVertical="true" />
                <com.fimi.widget.SwitchButton android:id="@id/swb_low_power_landing" android:layout_width="@dimen/x8s_main_fc_item_x8" android:layout_height="@dimen/x8s_main_fc_item_x6" android:layout_alignParentRight="true" android:layout_centerVertical="true" batteryLayout:onColor="#ff09d9ff" />
            </RelativeLayout>
            <com.fimi.app.x8s.widget.X8ValueSeakBarView android:id="@id/vsb_low_power_serious_warning" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" batteryLayout:x8_value_title="@string/x8_battery_setting_serious_low_power_warning" batteryLayout:x8_value_suffix="%" batteryLayout:x8_value_close_color="@color/white_100" batteryLayout:x8_value_open_color="@color/x8_fc_all_setting_blue" batteryLayout:x8_value_seekbar_max="30.0" batteryLayout:x8_value_seekbar_default="15.0" batteryLayout:x8_value_seekbar_min="10.0" />
            <RelativeLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_low_power_operation" android:layout_centerVertical="true" />
                <com.fimi.app.x8s.widget.X8TabHost android:id="@id/th_low_power_operation" android:padding="@dimen/x8s_main_battery_item_x1" android:layout_width="wrap_content" android:layout_height="@dimen/x8s_main_battery_item_x7" android:layout_alignParentRight="true" android:layout_centerInParent="true" batteryLayout:src="@array/x8_battery_low_power_state_option" batteryLayout:radiusC="@dimen/x8s_main_battery_item_x2" batteryLayout:text_sizeC="@dimen/textsize_36" batteryLayout:text_select_color="@color/tabradio_attr_selected_text_color" batteryLayout:text_unselect_color="@color/tabradio_attr_unselected_text_color" batteryLayout:tab_select_color="@color/tabradio_attr_unselected_color" batteryLayout:tab_unselect_color="@color/tabradio_attr_unselected_color" batteryLayout:tab_space="@dimen/x8s_main_battery_item_x1" batteryLayout:bg="#00000000" batteryLayout:lineStroke="@dimen/x8s_main_battery_item_x1" batteryLayout:lineColor="@color/white_25" batteryLayout:default_index="1" />
            </RelativeLayout>
            <RelativeLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/white_100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x8s_main_battery_item_x6" android:layout_marginTop="@dimen/x8s_main_battery_item_x5" android:layout_marginBottom="@dimen/x8s_main_battery_item_x5" android:text="@string/x8_battery_setting_serious_low_power_operation" android:layout_centerVertical="true" />
                <com.fimi.app.x8s.widget.X8TabHost android:id="@id/th_low_power_operation_serious" android:padding="@dimen/x8s_main_battery_item_x1" android:layout_width="wrap_content" android:layout_height="@dimen/x8s_main_battery_item_x7" android:layout_alignParentRight="true" android:layout_centerInParent="true" batteryLayout:src="@array/x8_battery_serious_low_power_state_option" batteryLayout:radiusC="@dimen/x8s_main_battery_item_x2" batteryLayout:text_sizeC="@dimen/textsize_36" batteryLayout:text_select_color="@color/tabradio_attr_selected_text_color" batteryLayout:text_unselect_color="@color/tabradio_attr_unselected_text_color" batteryLayout:tab_select_color="@color/tabradio_attr_unselected_color" batteryLayout:tab_unselect_color="@color/tabradio_attr_unselected_color" batteryLayout:tab_space="@dimen/x8s_main_battery_item_x1" batteryLayout:bg="#00000000" batteryLayout:lineStroke="@dimen/x8s_main_battery_item_x1" batteryLayout:lineColor="@color/white_25" batteryLayout:default_index="1" />
            </RelativeLayout>
        </LinearLayout>
        <com.fimi.kernel.percent.PercentLinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_abnormal_setting" batteryLayout:layout_marginBottomPercent="5%h">
            <View android:background="#00000000" android:layout_width="fill_parent" android:layout_height="20.0dip" />
            <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:layout_gravity="center_horizontal" android:id="@id/x8_battery_btn_rest_params" android:background="@drawable/x8_gimbal_gain_selector" android:layout_width="428.0dip" android:layout_height="30.0dip" android:text="@string/x8_battery_reset_params" android:textAllCaps="false" />
        </com.fimi.kernel.percent.PercentLinearLayout>
    </com.fimi.kernel.percent.PercentRelativeLayout>
</ScrollView>